# B-Agentic

./: .gitignore  README.md  agent.py  agent_config.py  initialize.py  models.py  pyproject.toml  requirements.txt  run_cli.py  run_ui.py  test.py  test_msg_endpoint.py
agent-zero-main/logs/: styles.css
agent-zero-main/memory/HDev/work_dir/memory_subdir/database/: index.faiss  index.pkl
agent-zero-main/memory/HDev/work_dir/memory_subdir/embeddings/: text-embedding-3-small97300265-f3fc-5995-a53c-917b3ea6545b
agent-zero-main/work_dir/.cache/pip/wheels/07/75/0b/7ca0b598eb4c21d43ba4bcc78a0538dfcf803a5997da33bc19/: PyGetWindow-0.0.9-py3-none-any.whl
agent-zero-main/work_dir/.cache/pip/wheels/20/0b/7f/939ac9ff785b09951c706150537572c00123412f260a6024f3/: MouseInfo-0.1.3-py3-none-any.whl
agent-zero-main/work_dir/.cache/pip/wheels/58/d2/1b/c2247396a6c5fbb1900ccf1ec3b73482d428b137dcdf1d99de/: python3_xlib-0.15-py3-none-any.whl
agent-zero-main/work_dir/.cache/pip/wheels/85/92/63/e126ee5f33d8f2ed04f96e43ef5df7270a2f331848752e8662/: PyMsgBox-1.0.9-py3-none-any.whl
agent-zero-main/work_dir/.cache/pip/wheels/95/dc/b1/fe122b791e0db8bf439a0e6e1d2628e48f10bf430cae13521b/: PyAutoGUI-0.9.54-py3-none-any.whl
agent-zero-main/work_dir/chrome_extension/: background.js  manifest.json
python/: __init__.py
python/helpers/: __init__.py  defer.py  perplexity_search.py  tool.py
python/tools/: __init__.py  call_subordinate.py  code_execution_tool.py  knowledge_tool.py  memory_tool.py  response.py  task_done.py  unknown.py  webpage_content_tool.py
webui/: index.html  index.js
(+4 files in other folders)
